Thu Oct 17 14:54:44 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/dblib/unittests/t0022.c:
	- If no output parameters are received and TDS 7 or TDS 8
	  is being used, print a warning and exit with success.
	  Temporary workaround for a bug introduced in SQL 7.0 SP3.

Thu Oct 17 11:08:33 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* freetds.conf:
	- Set a reasonable default text size for now, until someone
	  implements a better solution to the unreasonable memory
	  requirements when dealing with text objects on MS SQL Server.

Thu Oct 17 10:15:57 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/dblib/dblib.c src/dblib/unittests/t0014.c:
	- Add support for logged bulk writetext requests.
	- Use logged writetext in src/dblib/unittests/t0014 so that
	  the unit test can pass even if the "select into/bulkcopy"
	  option is not set on the database used for testing.

Thu Oct 17 09:56:05 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* configure.in include/tds_sysdep_private.h.in src/tds/threadsafe.c:
	- Rename SOCK_REENTRANT to NETDB_REENTRANT.
	- Move definition of same for osf1 into configure.in.

Tue Oct 15 16:22:03 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* doc/Makefile.am:
	- Make txt2man failures nonfatal.  txt2man is not portable
	  and really needs to go away.

Tue Oct 15 16:06:02 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* Makefile.am src/pool/Makefile.am:
	- Undo the dist_sysconf_DATA change made earlier, so we don't
	  overwrite users' local configuration.  Instead, just fix the
	  ETC definition so we don't get extraneous slashes.

Tue Oct 15 15:04:11 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/Makefile.am:
	- Use noinst_HEADERS instead of EXTRA_DIST to specify our
	  private headers.

Tue Oct 15 14:52:55 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* Makefile.am src/pool/Makefile.am:
	- Use automake dist_sysconf_DATA to install our configuration
	  files, instead of rolling our own.
