@@ -9,7 +9,8 @@ include_HEADERS	=	bkpublic.h cspublic.h cstypes.h ctlib.h ctpublic.h \
 
 noinst_HEADERS	=	tds_configs.h \
 			tdsiconv.h md4.h des.h \
-			replacements.h
+			replacements.h \
+			tdsstring.h
 
 all-local: tds_sysdep_private.h tds_sysdep_public.h
 
